--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,5 @@
   "cairols.nileVenvCommand": ". ~/.virtualenvs/nile/bin/activate",
   "cairols.venvCommand": ". ~/.virtualenvs/cairo_venv/bin/activate",
   "cairols.nileUseVenv": true,
-  "editor.formatOnSave": true,
-  "cairo.cairoFormatPath": "/home/peter/.local/bin/cairo-format"
+  "editor.formatOnSave": true
 }
